--- a/force-app/main/default/classes/FlowControlLoopsCollections.cls
+++ b/force-app/main/default/classes/FlowControlLoopsCollections.cls
@@ -14,7 +14,7 @@
 * in flow control, loops, and collections. By mastering these concepts, developers will be able to write more
 * efficient and effective code in their Salesforce projects.
 *
-* @author Your Name
+* @author Habtamu Redie
 */
 
 public with sharing class FlowControlLoopsCollections {
@@ -29,7 +29,10 @@ public with sharing class FlowControlLoopsCollections {
      * @return "Hello World!" if x greater than y, otherwise return null.
      */
     public static String helloWorld(Integer x, Integer y) {
-        return null; // Replace null with the variable you used to store the result
+        if(x == null || y == null || x <= y) {
+            return null;
+        }
+        return 'Hello World!';
     }
 
     /**
@@ -42,7 +45,10 @@ public with sharing class FlowControlLoopsCollections {
      * @return true if the person is eligible to vote, false otherwise.
      */
     public static Boolean votingEligibility(Integer age) {
-        return null; // Replace null with the variable you used to store the result
+        if(age !=null && age >= 18){
+            return true;
+        }
+        return false;
     }
 
     /**
@@ -57,8 +63,17 @@ public with sharing class FlowControlLoopsCollections {
     public static Integer findMax(Integer num1, Integer num2) {
         // Initialize largestNum as null
         Integer largestNum = null;
+        if(num1 == null || num2 == null){
+            return null;
+        }
+        else if(num1 >= num2){
+            largestNum = num1;
+        }
+        else{
+            largestNum = num2;
+        }
 
-        return null; // Replace null with the variable you used to store the result
+        return largestNum;
     }
 
 
@@ -71,7 +86,16 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the number is "Positive", "Negative", or "Zero", or null if the number is null.
      */
     public static String checkNumber(Integer a) {
-        return null; // Replace null with the variable you used to store the result
+        if(a == null){
+            return null;
+        }
+        else if(a > 0){
+            return 'Positive';
+        }
+        else if(a < 0){
+            return 'Negative';
+        }
+        return 'Zero';
     }
 
     /**
@@ -83,7 +107,13 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the number is "Even" or "Odd", or null if the number is null.
      */
     public static String checkEvenOdd(Integer a) {
-        return null; // Replace null with the variable you used to store the result
+        if(a == null){
+            return null;
+        }
+        else if(math.mod(a, 2) == 0){
+            return 'Even';
+        }
+        return 'Odd';
     }
 
     /**
@@ -94,7 +124,13 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the input is "Empty", "Null", or "Contains Text".
      */
     public static String checkString(String a) {
-        return null; // Replace null with the variable you used to store the result
+        if(a == null){
+            return 'Null';
+        }
+        else if(a == ''){
+            return 'Empty';
+        }
+        return 'Contains Text';
     }
 
     /**
@@ -110,7 +146,24 @@ public with sharing class FlowControlLoopsCollections {
      * @return The grade for the given score.
      */
     public static String determineGrade(Integer score) {
-        return null; // Replace null with the variable you used to store the result
+        if(score == null){
+            return null;
+        }
+        else if(score >= 90){
+            return 'A';
+        }
+        else if(score >= 80){
+            return 'B';
+        }
+        else if(score >= 70){
+            return 'C';
+        }
+        else if(score >= 60){
+            return 'D';
+        } else{
+            return 'F';
+        }
+       
     }
 
 
@@ -122,13 +175,14 @@ public with sharing class FlowControlLoopsCollections {
      * @return The sum of all integers up to the limit.
      */
     public static Integer sumUpToLimit(Integer intLimit) {
-        /* 
-         for (){
-            
-         }
-        */
-
-        return null; // Replace null with the variable you used to store the result
+        if(intLimit == null){
+            return null;
+        }
+    Integer sum = 0;
+    for(Integer i = 1; i <= intLimit; i++){
+        sum+= i;
+    }
+    return sum;
     }
 
     /**
@@ -139,15 +193,12 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static String returnHelloWorld() {
         // Initialize the result String
-
+         String greet = '';
         // Use a for loop to append 'Hello World!;' to the result string three times
-        /* 
-         for (){
-            
-         }
-        */
-
-        return null; // Replace null with the variable you used to store the result
+        for(Integer i = 0; i < 3; i++){
+            greet += 'Hello World!; ';
+        }
+        return greet;
     }
 
     /**
@@ -161,19 +212,26 @@ public with sharing class FlowControlLoopsCollections {
      * @return The new string with the inputString repeated repeatCount times.
      */
     public static String repeatString(String inputString, Integer repeatCount) {
-        // Initialize the result String
-
-        // Use a for loop to append the inputString to the result string repeatCount times
-        /*
-        for () {
-
-            // If it is not the last iteration, add a semicolon to separate the strings
+        if(inputString == null || repeatCount == null || repeatCount <= 0){
+            return null;
         }
-        */
+        // Initialize the result String
+         String greet = '';
+        // Use a for loop to append the inputString to the result string repeatCount times
+        
+       for(Integer i = 0; i< repeatCount; i++){
+              greet += inputString;
+
+              if(i < repeatCount - 1){
+                  greet += '; ';
+
+       }
 
         // Return the final result string
-        return null; // Replace null with the variable you used to store the result
+        // Replace null with the variable you used to store the result
     }
+    return greet; 
+}
 
     /**
      * Question 11
@@ -183,14 +241,12 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static List<Integer> createAndPopulateList() {
         // Create a new list of integers
+        List<Integer> numberList = new list<Integer>();
+        numberList.add(1);
+        numberList.add(2);
+        numberList.add(3);
 
-        // Add the integers 1, 2, and 3 to the list
-        // add 1
-        // add 2
-        // add 3
-
-        // Return the populated list
-        return null; // Replace null with the variable you used to store the result
+        return numberList;
     }
 
     /**
@@ -203,10 +259,10 @@ public with sharing class FlowControlLoopsCollections {
         // Create a new list of integers and add numbers 1 to 5
         List<Integer> numberList = new List<Integer>{1, 2, 3, 4, 5}; //DO NOT CHANGE
 
-        // Remove the 3rd element (number 3) from the list
+       numberList.remove(2);
         
         // Return the updated list
-        return null; // Replace null with the variable you used to store the result
+        return numberList; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -218,14 +274,14 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static List<Integer> createIntegerList(Integer n) {
         // Create a new list of integers 
-
-        /*
-        for() {
-            //add integer to the list
-        }
-        */ 
-
-        return null; // Replace null with the variable you used to store the result
+        List<Integer> result = new List<Integer>();
+            if(n == null || n <= 0){
+                return result;
+            }
+            for(Integer i = 1; i <= n; i++){
+                result.add(i);
+            }
+        return result;
     }
 
     /**
@@ -239,10 +295,16 @@ public with sharing class FlowControlLoopsCollections {
     public static Set<String> createStringSet(List<String> inputList) {
         // Create a new Set of strings
         Set<String> stringSet = new Set<String>();
+        if(inputList == null){
+            return stringSet;
+        }
+        for(String s : inputList){
+            stringSet.add(s);
+        }
 
         //add strings to the set
 
-        return null; // Replace null with the variable you used to store the result
+        return stringSet; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -253,12 +315,14 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Integer sumPositiveIntegers() {
         List<Integer> numbers = new List<Integer>{-1, 2, -3, 4, -5, 6}; //DO NOT CHANGE
-
-        // Loop through the list of integers
-            // if the number is negative skip this iteration
+        Integer sum = 0;
+        for(Integer num : numbers){
+            if(num > 0){
+                 sum += num;
+            }
+         }
         
-
-        return null; // Replace null with the variable you used to store the result
+        return sum; 
     }
 
     /**
@@ -271,11 +335,20 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Integer findWordInList(String wordToFind, List<String> words) {
         // The variable to store the index of the word
+          Integer index = -1;
 
+          if(String.isBlank(wordToFind) || words == null){
+                return index;
+          }
+          for(Integer i = 0; i < words.size(); i++){
+                if(words[i] == wordToFind){
+                    index = i;
+                    break;
+                }
+          }
         // Loop through the list of words
             // If the current word is the word to find, exit the loop
-
-        return null; // Replace null with the variable you used to store the result
+        return index; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -286,10 +359,19 @@ public with sharing class FlowControlLoopsCollections {
      * @return The total value in dollars, stopped at the point when it exceeds 40 dollars.
      */
     public static Decimal countMoney() {
+        Decimal total = 0;
         // The list of money in the wallet, represented in dollars and cents
         List<Decimal> moneyInWallet = new List<Decimal>{0.50, 10, 3.84, 24.60, 9.08, 50, 4.90}; //DO NOT CHANGE
 
-        return null; // Replace null with the variable you used to store the result
+        for(Decimal money : moneyInWallet){
+            total = total + money;
+
+             if(total > 40){
+                break;
+            }
+        }
+           
+        return total; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -300,7 +382,12 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Map<String, Integer> addItemsToMap() {
         // Initialize an empty Map
-
+        Map<String, Integer> fruitQtyMap = new Map<String, Integer>();
+            fruitQtyMap.put('Apples', 5);
+            fruitQtyMap.put('Oranges', 10);
+            fruitQtyMap.put('Bananas', 15);
+            fruitQtyMap.put('Pears', 20);
+            fruitQtyMap.put('Grapes', 25);
         // Add key-value pairs to the Map
         // add Apples => 5
         // add Oranges => 10
@@ -308,7 +395,7 @@ public with sharing class FlowControlLoopsCollections {
         // add Pears => 20
         // add Grapes => 25
 
-        return null; // Replace null with the variable you used to store the result
+        return fruitQtyMap; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -322,7 +409,17 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Integer getSalary(String employeeName) {
         // Initialize a Map
+        Map<String, Decimal> empSalaryMap = new Map<String, Decimal>{
+        'John Doe' => 50000,
+        'Jane Smith' => 60000,
+        'Sam Brown' => 55000,
+        'Alice Johnson' => 65000
+        };
+           
+        if(empSalaryMap.containsKey(employeeName)){
 
+            return Integer.valueOf(empSalaryMap.get(employeeName));
+        }
         // Add key-value pairs to the Map
         // add John Doe => 50000
         // add Jane Smith => 60000
@@ -348,7 +445,10 @@ public with sharing class FlowControlLoopsCollections {
     public static List<String> getHighPaidEmployees() {
         // Initialize a Map
         Map<String, Integer> employeeSalaries = new Map<String, Integer>();
-
+        employeeSalaries.put('John Doe', 50000);
+        employeeSalaries.put('Jane Smith', 60000);  
+        employeeSalaries.put('Sam Brown', 55000);   
+        employeeSalaries.put('Alice Johnson', 65000);
         // Add key-value pairs to the Map
         // add John Doe => 50000
         // add Jane Smith => 60000
@@ -356,13 +456,18 @@ public with sharing class FlowControlLoopsCollections {
         // add Alice Johnson => 65000
 
         // Initialize a list to store the names of high paid employees
-
+       List<String> highPaidEmployees = new List<String>();
+       for(String empName : employeeSalaries.keySet()){
+           if(employeeSalaries.get(empName) > 55000){
+                highPaidEmployees.add(empName);
+           }
+       }
         // Iterate over the Map using a for loop
             // Check if the salary of the employee is more than 55000
                 // Add the employee to the list of high paid employees
 
         // Return the list of high paid employees
-        return null; // Replace null with the variable you used to store the result
+        return highPaidEmployees; // Replace null with the variable you used to store the result
     }
 
 }
